# differential_wos

./: README.md  requirements.txt
opttools/: __init__.py  largesteps.py  mesh_helper.py  polyline.py  remesh.py  sampler.py  uniformadam.py  uniformvectoradam.py  util.py  util2d.py  vectoradam.py
pywos/: __init__.py  util.py  walk.py
zombie/: CMakeLists.txt  LICENSE.md
zombie/include/zombie/boundary_value_caching/: splatter.h
zombie/include/zombie/core/: geometric_queries.h  pde.h  sampling.h  value.h
zombie/include/zombie/point_estimation/: walk_on_stars.h
zombie/include/zombie/utils/: fcpw_scene_loader.h
zombie/pyzombie/: CMakeLists.txt  api.cpp
zombie/pyzombie/include/pyzombie/: analytic.h  bezier_scene.h  common.h  grid.h  mesh_geometry.h  polynomial_root_finder.h  progress.h  toast_scene.h  util.h
zombie_example/: data.npz  optimize.py
